--- a/#src/footer.html
+++ b/#src/footer.html
@@ -1,6 +1,55 @@
 <footer class="footer">
 	<div class="footer__container container">
-
+		<a href="/" class="footer__logo">
+			<img src="img/logo.png" alt="">
+		</a>
+		<div class="footer__flex">
+			<div class="footer-left">
+				<div class="footer__adresses">
+					<div class="footer__adress adress">
+						<div class="adress__title">ТЦ «Аксон»,</div>
+						<div class="adress__subtitle">г. Вологда, Окружное шоссе, 18</div>
+					</div>
+					<div class="footer__adress adress">
+						<div class="adress__title">ТЦ «Аксон»,</div>
+						<div class="adress__subtitle">г. Вологда, Окружное шоссе, 18</div>
+					</div>
+				</div>
+			</div>
+			<ul class="footer-tels">
+				<li>
+					<a href="">8 (8172) 74-74-20</a>
+				</li>
+				<li>
+					<a href="">8 (911) 502-55-13</a>
+				</li>
+				<li>
+					<a href="">8 (921) 126-22-25</a>
+				</li>
+				<li>
+					<a href="">8 (911) 502-55-13</a>
+				</li>
+			</ul>
+			<div class="footer-socials">
+				<a href="#">
+					<img src="svg/vk-footer.svg" />
+				</a>
+				<a href="#">
+					<img src="svg/instagram-footer.svg" />
+				</a>
+				<a href="#">
+					<img src="svg/vk-footer.svg" />
+				</a>
+				<a href="#">
+					<img src="svg/instagram-footer.svg" />
+				</a>
+			</div>
+			<div class="footer-right">
+				<p>Copyright © 2018 Печной центр «КАМИ»</p>
+				<p>Все права защищены.</p>
+				<p>Создание сайта - <a href="https://udnet.ru/" target="_blank" class="dev">Удобный интернет</a></p>
+			</div>
+		</div>
 	</div>
 </footer>
 
