--- a/#src/footer.html
+++ b/#src/footer.html
@@ -38,7 +38,7 @@
 					<img src="svg/instagram-footer.svg" />
 				</a>
 				<a href="#">
-					<img src="svg/vk-footer.svg" />
+					<img src="svg/instagram-footer.svg" />
 				</a>
 				<a href="#">
 					<img src="svg/instagram-footer.svg" />
