--- a/#src/index.html
+++ b/#src/index.html
@@ -3,9 +3,7 @@
 <main class="main">
 	<section class="hero" style='background-image: url(img/hero.jpg);'>
 		<div class="hero__container container">
-			<div class="hero__title-wrapper">
-				<h1 class="hero__title"><span>Все для кладки печей</span>в одном месте</h1>
-			</div>
+			<h1 class="hero__title"><span>Все для кладки печей</span>в одном месте</h1>
 			<div class="hero__btn btn">Заказать звонок</div>
 			<div class="after-scroll">
 				<span></span>
@@ -55,7 +53,7 @@
 		</div>
 	</section>
 
-	<section class="materials">
+	<section class="materials" id="materials">
 		<div class="materials__container container">
 			<div class="materials__top title-block">
 				<div class="title-block__icon">
