--- a/#src/footer.html
+++ b/#src/footer.html
@@ -37,12 +37,6 @@
 				<a href="#">
 					<img src="svg/instagram-footer.svg" />
 				</a>
-				<a href="#">
-					<img src="svg/instagram-footer.svg" />
-				</a>
-				<a href="#">
-					<img src="svg/instagram-footer.svg" />
-				</a>
 			</div>
 			<div class="footer-right">
 				<p>Copyright © 2018 Печной центр «КАМИ»</p>
@@ -59,6 +53,7 @@
 <script src="js/ofi.min.js"></script>
 <script src="js/jquery.inputmask.min.js"></script>
 <script src="js/swiper.min.js"></script>
+<script src="js/aos.js"></script>
 <!-- <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script> -->
 <script src="js/jquery.fancybox.min.js"></script>
 <script src="js/alertify.min.js"></script>
