--- a/#src/index.html
+++ b/#src/index.html
@@ -12,7 +12,7 @@
 		</div>
 	</section>
 
-	<section class="individ">
+	<section class="individ" data-aos="fade-up">
 		<div class="individ__container container">
 			<div class="individ__top title-block">
 				<div class="title-block__icon">
@@ -53,14 +53,14 @@
 		</div>
 	</section>
 
-	<section class="materials" id="materials">
+	<section class="materials" id="materials" data-aos="fade-up">
 		<div class="materials__container container">
 			<div class="materials__top title-block">
 				<div class="title-block__icon">
 					<img src="svg/title.svg" alt="">
 				</div>
 				<h2 class="title-block__title title"><span>Материалы и фурнитура,</span>которые мы используем в работе</h2>
-				<div class="title-block__bg">ШИРОКИЙ ВЫБОР</div>
+				<div class="title-block__bg title-block__bg--wh">ШИРОКИЙ ВЫБОР</div>
 			</div>
 			<div class="materials__tabs tabs-materials">
 				<ul class="tabs-materials__buttons">
@@ -89,7 +89,7 @@
 										<div class="material__img">
 											<img src="img/materials-1.jpg" alt="">
 										</div>
-										<div class="material__title">Коричневый радиус Коричневый радиус Коричневый радиус</div>
+										<div class="material__title">Коричневый радиус</div>
 										<div class="material__subtitle">Кирпич лицевой полнотелый 1НФЛ, марка М-300</div>
 										<div class="material__city">Кирово-Чепецк</div>
 										<div class="material__price">от 49 руб/шт</div>
@@ -363,7 +363,7 @@
 		</div>
 	</section>
 
-	<section class="payment">
+	<section class="payment" data-aos="fade-up">
 		<div class="payment__container container">
 			<div class="payment__top title-block">
 				<div class="title-block__icon">
@@ -402,7 +402,7 @@
 		</div>
 	</section>
 
-	<section class="delegate" style='background-image: url(img/delegate.jpg);'>
+	<section class="delegate" style='background-image: url(img/delegate.jpg);' data-aos="fade-up">
 		<div class="delegate__container container">
 			<div class="delegate__top title-block">
 				<div class="title-block__icon">
@@ -450,7 +450,7 @@
 		</div>
 	</section>
 
-	<section class="choose">
+	<section class="choose" data-aos="fade-up">
 		<div class="choose__container container">
 			<div class="choose__top title-block">
 				<div class="title-block__icon">
@@ -470,19 +470,24 @@
 					<div class="choose__slider">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="img/choose-1.jpg" alt="">
+								<div class="choose__img">
+									<img src="img/choose-1.jpg" alt="">
+								</div>
 							</div>
 							<div class="swiper-slide">
-								<img src="img/choose-1.jpg" alt="">
+								<div class="choose__img">
+									<img src="img/choose-1.jpg" alt="">
+								</div>
 							</div>
 							<div class="swiper-slide">
-								<img src="img/choose-1.jpg" alt="">
+								<div class="choose__img">
+									<img src="img/choose-1.jpg" alt="">
+								</div>
 							</div>
 							<div class="swiper-slide">
-								<img src="img/choose-1.jpg" alt="">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/choose-1.jpg" alt="">
+								<div class="choose__img">
+									<img src="img/choose-1.jpg" alt="">
+								</div>
 							</div>
 						</div>
 					</div>
@@ -526,7 +531,7 @@
 		</div>
 	</section>
 
-	<section class="about" style='background-image: url(img/about.jpg);'>
+	<section class="about" style='background-image: url(img/about.jpg);' data-aos="fade-up">
 		<div class="about__container container">
 			<div class="about__subcontainer">
 				<h2 class="about__title title title--wh">«Ками» печной центр Вологда</h2>
@@ -564,7 +569,7 @@
 		</div>
 	</section>
 
-	<section class="projects">
+	<section class="projects" data-aos="fade-up">
 		<div class="projects__container container">
 			<div class="projects__top title-block">
 				<div class="title-block__icon">
@@ -653,7 +658,7 @@
 		</div>
 	</section>
 
-	<section class="gift" style='background-image: url(img/gift-bg.jpg);'>
+	<section class="gift" style='background-image: url(img/gift-bg.jpg);' data-aos="fade-up">
 		<div class="gift__container container">
 			<div class="gift__top title-block">
 				<div class="title-block__icon">
