--- a/#src/header.html
+++ b/#src/header.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/jquery.fancybox.min.css">
+	<link rel="stylesheet" href="css/aos.css">
 	<link rel="stylesheet" href="css/swiper.min.css">
 	<link rel="stylesheet" href="css/alertify.min.css">
 	<link rel="stylesheet" href="css/default.min.css">
@@ -65,12 +66,6 @@
 						<a href="">
 							<img src="svg/instagram.svg" alt="">
 						</a>
-						<a href="">
-							<img src="svg/instagram.svg" alt="">
-						</a>
-						<a href="">
-							<img src="svg/instagram.svg" alt="">
-						</a>
 					</div>
 					<div class="header__menu menu">
 						<button class="menu__btn">
@@ -115,12 +110,6 @@
 							<div class="menu__socials">
 								<a href="#">
 									<img src="svg/vk.svg" alt="">
-								</a>
-								<a href="#">
-									<img src="svg/instagram.svg" alt="">
-								</a>
-								<a href="#">
-									<img src="svg/instagram.svg" alt="">
 								</a>
 								<a href="#">
 									<img src="svg/instagram.svg" alt="">
