fixed posle posadki

--- a/#src/index.html
+++ b/#src/index.html
@@ -4,7 +4,7 @@
 	<section class="hero" style='background-image: url(img/hero.jpg);'>
 		<div class="hero__container container">
 			<h1 class="hero__title"><span>Все для кладки печей</span>в одном месте</h1>
-			<div class="hero__btn btn">Заказать звонок</div>
+			<a class="hero__btn btn" data-src="#modal-call" href="javascript:;">Заказать звонок</a>
 			<div class="after-scroll">
 				<span></span>
 				<span></span>
@@ -509,22 +509,16 @@
 				<div class="choose__subtitle">Полный ассортимент решений доступен на сайтах наших партнеров</div>
 				<ul class="choose__logos">
 					<li>
-						<img src="img/logo.png" alt="">
+						<a href="#">
+							<img src="img/logo.png" alt="">
+						</a>
+
 					</li>
 					<li>
-						<img src="img/logo.png" alt="">
-					</li>
-					<li>
-						<img src="img/logo.png" alt="">
-					</li>
-					<li>
-						<img src="img/logo.png" alt="">
-					</li>
-					<li>
-						<img src="img/logo.png" alt="">
-					</li>
-					<li>
-						<img src="img/logo.png" alt="">
+						<a href="#">
+							<img src="img/logo.png" alt="">
+						</a>
+
 					</li>
 				</ul>
 			</div>
@@ -545,6 +539,18 @@
 						коптилки, правильная организация топки в печи для казана.</p>
 					<p>Ваш комплекс будет радовать Вас отличной работой, безупречным внешним видом и удобством использования. А Вы
 						порадуете себя и своих близких вкуснейшими блюдами.</p>
+					<ul>
+						<li>порадуете себя и своих близких в</li>
+						<li>порадуете себя и своих близких в</li>
+						<li>порадуете себя и своих близких в</li>
+						<li>порадуете себя и своих близких в</li>
+					</ul>
+					<ol>
+						<li>порадуете себя и своих близких в</li>
+						<li>порадуете себя и своих близких в</li>
+						<li>порадуете себя и своих близких в</li>
+						<li>порадуете себя и своих близких в</li>
+					</ol>
 				</div>
 				<div class="about__grid">
 					<div class="about__item">
