--- a/#src/index.html
+++ b/#src/index.html
@@ -71,6 +71,32 @@
 				</ul>
 				<div class="tabs-materials__body">
 					<div class="tabs-materials__block active">
+						<div class="tabs-materials__descr type-style">
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis perspiciatis beatae dolorum id repellat
+							</p>
+							<ul>
+								<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis incidunt cum fuga quisquam.
+									Vel, ab, fugiat sequi placeat dolorum sit vitae excepturi sint assumenda, hic doloribus velit porro
+									reiciendis veritatis!</li>
+								<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis incidunt cum fuga quisquam.
+									Vel, ab, fugiat sequi placeat dolorum sit vitae excepturi sint assumenda, hic doloribus velit porro
+									reiciendis veritatis!</li>
+								<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis incidunt cum fuga quisquam.
+									Vel, ab, fugiat sequi placeat dolorum sit vitae excepturi sint assumenda, hic doloribus velit porro
+									reiciendis veritatis!</li>
+							</ul>
+							<ol>
+								<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis incidunt cum fuga quisquam.
+									Vel, ab, fugiat sequi placeat dolorum sit vitae excepturi sint assumenda, hic doloribus velit porro
+									reiciendis veritatis!</li>
+								<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis incidunt cum fuga quisquam.
+									Vel, ab, fugiat sequi placeat dolorum sit vitae excepturi sint assumenda, hic doloribus velit porro
+									reiciendis veritatis!</li>
+								<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis incidunt cum fuga quisquam.
+									Vel, ab, fugiat sequi placeat dolorum sit vitae excepturi sint assumenda, hic doloribus velit porro
+									reiciendis veritatis!</li>
+							</ol>
+						</div>
 						<div class="tabs-materials__slider">
 							<div class="swiper-wrapper">
 								<div class="swiper-slide">
